# CodeBlocks_Unofficial_Testing

./: .clang-format  .gitignore  AStyle_format_src.bat  Astylerc.ini  CB_create_dmg.sh  ChangeLog  Clang_Style_format_src.bat  CodeBlocks_wx30-unix.workspace  Makefile.am  README  README.md  README_Release_Checklist.txt  Readme_Build_Debian_deb_packages.txt  Readme_Build_Linux_by_Makefile - ORIG.txt  Readme_Build_Linux_by_Makefile.txt  Readme_Build_Linux_by_Workspace.txt  Readme_Build_MacOS_by_Makefile.txt  Readme_Build_MacOS_by_Workspace.txt  Readme_Build_Windows_MSYS2_by_Makefile.txt  Readme_Build_Windows_by_Workspace.md  Readme_Build_Windows_by_Workspace.txt  Readme_Release_Checklist.txt  SVN_Remove_Keywords.sh  bootstrap  bundle.sh.in  codeblocks.pc.in  codeblocks.plist.in  codeblocks.spec.fedora.in  codeblocks.spec.in  codeblocks_update_devel.sh  configure.ac  update_revision.sh  windows_build_msys2.sh  windows_update_devel.sh  wx-config-cb-win64  wx-config-cb-win64_31  wx-config-cb-win64_32
src/build_tools/autorevision/: Makefile.am  autorevision.cpp
src/mime/: Makefile.am
src/plugins/: Makefile.am
src/plugins/abbreviations/: Makefile.am  abbreviations.cpp  abbreviations.h  abbreviationsconfigpanel.cpp  abbreviationsconfigpanel.h
src/plugins/astyle/: Makefile.am  asstreamiterator.cpp  asstreamiterator.h  astyleconfigdlg.cpp  astyleconfigdlg.h  astyleplugin.cpp  astyleplugin.h  astylepredefinedstyles.h  dlgformattersettings.cpp  dlgformattersettings.h  formattersettings.cpp  formattersettings.h
src/plugins/autosave/: Makefile.am  autosave.cpp  autosave.h  manifest.rc  manifest.xml
src/plugins/clangd_client/: ClangdClient_wx31_64.cbp  Clangd_Client_MacOS.cbp  Clangd_Client_Unix.cbp  Linux_Build_file_changes.txt  Makefile.am  clangd_client-unix30.cbp  clangd_client.cbp  clangd_client_Windows.cbp  clangd_client_wx30-unix.cbp  clangd_client_wx31.cbp  clangd_client_wx31_64.cbp  zipResources.sh
src/plugins/clangd_client_R5/: ClangdClient.cbp  zipResources.bat
src/plugins/classwizard/: Makefile.am  classwizard.cpp  classwizard.h  classwizarddlg.cpp  classwizarddlg.h
src/plugins/codecompletion/: Makefile.am  ccoptionsdlg.cpp  ccoptionsdlg.h  ccoptionsprjdlg.cpp  ccoptionsprjdlg.h  cctest_MacOS.cbp  cctest_Windows.cbp  cctest_unix.cbp  cctest_wx30-unix.cbp  cctest_wx31.cbp  cctest_wx31_64.cbp  cctreectrl.cpp  cctreectrl.h  classbrowser.cpp  classbrowser.h  classbrowserbuilderthread.cpp  classbrowserbuilderthread.h  codecompletion.cpp  codecompletion.h  coderefactoring.cpp  coderefactoring.h  doxygen_parser.cpp  gotofunctiondlg.cpp  gotofunctiondlg.h  insertclassmethoddlg.cpp  nativeparser.cpp  nativeparser.h  nativeparser_base.cpp  nativeparser_base.h  selectincludefile.cpp  selectincludefile.h  systemheadersthread.cpp  systemheadersthread.h
src/plugins/compilergcc/: Makefile.am  advancedcompileroptionsdlg.cpp  advancedcompileroptionsdlg.h  compilerCYGWIN.cpp  compilerCYGWIN.h  compilerG95.cpp  compilerG95.h  compilerGDC.cpp  compilerGDC.h  compilerGNUARM.cpp  compilerGNUARM.h  compilerGNUFortran.cpp  compilerGNUFortran.h  compilerIAR.cpp  compilerIAR.h  compilerICC.cpp  compilerICC.h  compilerKeilC51.cpp  compilerKeilC51.h  compilerLCC.cpp  compilerLCC.h  compilerMINGW.cpp  compilerMINGW.h  compilerMINGWgenerator.cpp  compilerMINGWgenerator.h  compilerMSVC.cpp  compilerMSVC.h  compilerMSVC10.cpp  compilerMSVC10.h  compilerMSVC8.cpp  compilerMSVC8.h  compilerOW.cpp  compilerOW.h  compilerOWgenerator.cpp  compilerOWgenerator.h  compilerXML.cpp  compilerXML.h  compiler_defs.cpp  compiler_defs.h  compilererrors.cpp  (+11 more)
src/plugins/contrib/: Makefile.am
src/plugins/contrib-wip/: Makefile.am
src/plugins/debuggergdb/: DebuggerGDB_Test_Unix_MacOS.cbp  Makefile.am  cdb_commands.h  cdb_driver.cpp  cdb_driver.h  databreakpointdlg.cpp  databreakpointdlg.h  debugger_defs.cpp  debugger_defs.h  debuggerdriver.cpp  debuggerdriver.h  debuggergdb.cpp  debuggergdb.h  debuggergdb_test.cbp  debuggergdb_test_MacOS.cbp  debuggergdb_test_backtrace.cpp  debuggergdb_test_common.h  debuggergdb_test_defs.cpp  debuggergdb_test_examine_memory.cpp  debuggergdb_test_main.cpp  debuggergdb_test_parse_locals.cpp  debuggergdb_test_parser.cpp  debuggergdb_test_parser_cdb.cpp  debuggergdb_test_unix.cbp  debuggergdb_test_wx30-unix.cbp  debuggeroptionsdlg.cpp  debuggeroptionsdlg.h  debuggeroptionsprjdlg.cpp  debuggeroptionsprjdlg.h  debuggerstate.cpp  debuggerstate.h  editbreakpointdlg.cpp  editbreakpointdlg.h  editwatchdlg.cpp  editwatchdlg.h  gdb_commands.h  gdb_driver.cpp  gdb_driver.h  parsewatchvalue.cpp  parsewatchvalue.h  (+1 more)
src/plugins/defaultmimehandler/: EmbeddedHtmlPanel.cpp  EmbeddedHtmlPanel.h  Makefile.am  defaultmimehandler.cpp  defaultmimehandler.h  editmimetypesdlg.cpp  editmimetypesdlg.h  mimetypesarray.h
src/plugins/displayevents/: CBDisplayEvents_Unix_MacOS.cbp  CBDisplayEvents_Windows_MSYS2.cbp  DisplayEvents.cpp  DisplayEvents.h  Makefile.am  cbDisplayEvents_MacOS.cbp  cbDisplayEvents_Windows.cbp  cbDisplayEvents_unix.cbp  cbDisplayEvents_wx30-unix.cbp  manifest.rc  manifest.xml
src/plugins/headerguard/: HeaderGuard_Windows_MSYS2.cbp  Makefile.am  headerguard.cpp  headerguard.h  headerguard_Windows.cbp  headerguard_wx31.cbp  headerguard_wx31_64.cbp  manifest.rc  (+1 more)
src/src/: Makefile.am  app.cpp  app.h  appglobals.cpp  appglobals.h  associations.cpp  associations.h  backtracedlg.cpp  backtracedlg.h  batchbuild.h  breakpointsdlg.cpp  breakpointsdlg.h  compilersettingsdlg.cpp  compilersettingsdlg.h  cpuregistersdlg.cpp  cpuregistersdlg.h  crashhandler.cpp  crashhandler.h  debugger_interface_creator.cpp  debugger_interface_creator.h  debuggermenu.cpp  debuggermenu.h  debuggersettingscommonpanel.cpp  debuggersettingscommonpanel.h  debuggersettingsdlg.cpp  debuggersettingsdlg.h  debuggersettingspanel.cpp  debuggersettingspanel.h  disassemblydlg.cpp  disassemblydlg.h  dlgabout.cpp  dlgabout.h  dlgaboutplugin.cpp  dlgaboutplugin.h  dlghelpsysteminformation.cpp  dlghelpsysteminformation.h  editkeywordsdlg.cpp  editkeywordsdlg.h  editorconfigurationdlg.cpp  editorconfigurationdlg.h  (+44 more)
(+4159 files in other folders)
