if BUILD_ABBREVIATIONS
MAYBE_ABBREVIATIONS=abbreviations
endif

if BUILD_ASTYLE
MAYBE_ASTYLE=astyle
endif

if BUILD_AUTOSAVE
MAYBE_AUTOSAVE=autosave
endif

if BUILD_CLANGDCLIENT
MAYBE_CLANGDCLIENT=clangd_client
endif

if BUILD_CLASSWIZARD
MAYBE_CLASSWIZARD=classwizard
endif

if BUILD_CODECOMPLETION
MAYBE_CODECOMPLETION=codecompletion
endif

if BUILD_COMPILER
MAYBE_COMPILER=compilergcc
endif

if BUILD_DEBUGGER
MAYBE_DEBUGGER_GDB=debuggergdb
endif

if BUILD_MIMEHANDLER
MAYBE_MIMEHANDLER=defaultmimehandler
endif

if BUILD_DISPLAYEVENTS
MAYBE_DISPLAYEVENTS=displayevents
endif

if BUILD_OPENFILESLIST
MAYBE_OPENFILESLIST=openfileslist
endif

if BUILD_OCCURRENCESHIGHLIGHTING
MAYBE_OCCURRENCESHIGHLIGHTING=occurrenceshighlighting
endif

if BUILD_PROJECTSIMPORTER
MAYBE_PROJECTSIMPORTER=projectsimporter
endif

if BUILD_SCRIPTEDWIZARD
MAYBE_SCRIPTEDWIZARD=scriptedwizard
endif

if BUILD_TODO
MAYBE_TODO=todo
endif

if BUILD_MANIFEST
MAYBE_MANIFEST=xpmanifest
endif

if CODEBLOCKS_NT
MAYBE_HEADERGUARD=headerguard
MAYBE_LOGHACKER=loghacker
MAYBE_MODPOLLER=modpoller
MAYBE_TIDYCMT=tidycmt
endif

SUBDIRS = \
			$(MAYBE_ABBREVIATIONS) \
			$(MAYBE_ASTYLE) \
			$(MAYBE_AUTOSAVE) \
			$(MAYBE_CLANGDCLIENT) \
			$(MAYBE_CLASSWIZARD) \
			$(MAYBE_CODECOMPLETION) \
			$(MAYBE_COMPILER) \
			$(MAYBE_DEBUGGER_GDB) \
			$(MAYBE_DISPLAYEVENTS) \
			$(MAYBE_MANIFEST) \
			$(MAYBE_MIMEHANDLER) \
			$(MAYBE_OCCURRENCESHIGHLIGHTING) \
			$(MAYBE_OPENFILESLIST) \
			$(MAYBE_PROJECTSIMPORTER) \
			$(MAYBE_SCRIPTEDWIZARD) \
			$(MAYBE_TODO) \
			$(MAYBE_HEADERGUARD) \
			$(MAYBE_LOGHACKER) \
			$(MAYBE_MODPOLLER) \
			$(MAYBE_TIDYCMT) \
			contrib \
			contrib-wip

# Both the 'contrib' and 'contrib-wip' subdirs contains its own filtering
DIST_SUBDIRS = $(SUBDIRS)

EXTRA_DIST = \
			headerguard \
			loghacker \
			modpoller \
			tidycmt
