if BUILD_DEBUGGER
MAYBE_DEBUGGER_DAP_PLUGIN=Debugger_DAP
endif

SUBDIRS = \
		cbDiff  \
		DebugAdapterProtocol \
		$(MAYBE_DEBUGGER_DAP_PLUGIN)

DIST_SUBDIRS = $(SUBDIRS)

# no Makefile.am    cbBuildTools
# no Makefile.am    cbInno
# no Makefile.am    cbMarkdown
# no Makefile.am    cbMemoryView
# no Makefile.am    cbNSIS
# no Makefile.am    cbSystemView
# no Makefile.am    cbtortoisesvn
# no Makefile.am    PythonPlugins
# no Makefile.am    debuggerGDB_MI
# no Makefile.am    GitBlocks
